--- a/languages/wp-nabezky-connector-cs_CZ.po
+++ b/languages/wp-nabezky-connector-cs_CZ.po
@@ -297,6 +297,12 @@ msgstr "Zpracováváme váš přístup k Nabezky mapě. Brzy dostanete e-mail s 
 msgid "Checking status..."
 msgstr "Kontrola stavu..."
 
+msgid "Yours Na bežky! map access information"
+msgstr "Vaše informace o přístupu k Na bežky! mapě"
+
+msgid "As a bonus with your purchase, you now have access to the premium Na bežky map with cross-country grooming status and other useful information. You can access the map immediately using the button below, or save the details from the email we sent you for later use."
+msgstr "Jako bonus k vašemu nákupu nyní máte přístup k prémiové Na bežky mapě s informacemi o úpravě běžeckých tratí a dalšími užitečnými informacemi. Můžete přistoupit k mapě okamžitě pomocí tlačítka níže, nebo si uložit detaily z e-mailu, který jsme vám poslali, pro pozdější použití."
+
 msgid "Registered User Bonus!"
 msgstr "Bonus pro registrovaného uživatele!"
 
@@ -357,8 +363,8 @@ msgid "Callback processed successfully"
 msgstr "Callback úspěšně zpracován"
 
 # New email strings
-msgid "Your map access is now ready."
-msgstr "Váš přístup k mapě je nyní připraven."
+msgid "This email contains Na bežky map access details. As a bonus with your purchase, you now have access to the premium map with cross-country grooming status and other useful information."
+msgstr "Tento e-mail obsahuje detaily o přístupu k Na bežky mapě. Jako bonus k vašemu nákupu nyní máte přístup k prémiové mapě s informacemi o úpravě běžeckých tratí a dalšími užitečnými informacemi."
 
 msgid "Your Voucher Information"
 msgstr "Informace o vašem poukazu"
