--- a/languages/wp-nabezky-connector-sk_SK.po
+++ b/languages/wp-nabezky-connector-sk_SK.po
@@ -61,7 +61,7 @@ msgid "Select products that trigger Nabezky integration"
 msgstr "Vyberte produkty, ktoré spustia Na bežky integráciu"
 
 msgid "Select WooCommerce products that should trigger Nabezky voucher generation when purchased"
-msgstr "Vyberte si WooCommerce produkty, ktoré by mali spustiť generovanie Na bežky poukazov pri kúpe"
+msgstr "Vyberte WooCommerce produkty, ktoré by mali spustiť generovanie Na bežky poukazov pri kúpe"
 
 msgid "No WooCommerce products found. Please create some products first."
 msgstr "Neboli nájdené žiadne WooCommerce produkty. Najprv vytvorte nejaké produkty."
@@ -72,11 +72,11 @@ msgstr "Cena sezónnej permanentky"
 msgid "Minimum price for generating a seasonal voucher instead of 3-day vouchers"
 msgstr "Minimálna cena pre generovanie sezónneho poukazu namiesto 3-dňových poukazov"
 
-msgid "Default Region ID"
-msgstr "Predvolené ID regiónu"
+msgid "Region ID"
+msgstr "ID regiónu"
 
-msgid "Default region ID for voucher generation (1-99)"
-msgstr "Predvolené ID regiónu pre generovanie poukazov (1-99)"
+msgid "Region ID for voucher generation"
+msgstr "ID regiónu pre generovanie poukazov (1-99)"
 
 msgid "Enable Plugin"
 msgstr "Povoliť modul"
