--- a/languages/wp-nabezky-connector-sk_SK.po
+++ b/languages/wp-nabezky-connector-sk_SK.po
@@ -300,7 +300,7 @@ msgstr "Kontrola stavu..."
 msgid "Your Na bežky! map access information"
 msgstr "Informácie o prístupe k Na bežky! mape"
 
-msgid "As a bonus with your purchase, you now have access to the premium Na bežky map with cross-country grooming status and other useful information. You can access the map immediately using the button below, or save the details from the email we sent you for later use."
+msgid "As a bonus with your purchase, you now have access to the premium Na bežky map with cross-country trails grooming status and other useful information. You can access the map immediately using the button below, or save the details from the email we sent you for later use."
 msgstr "Ako bonus k vášmu nákupu teraz máte prístup k prémiovej Na bežky mape s informáciami o úprave bežeckých tratí a ďalšími užitočnými informáciami. Mapu môžte navštíviť okamžite pomocou tlačidla nižšie, alebo si uložiť detaily z e-mailu, ktorý sme vám poslali, na neskoršie použitie."
 
 msgid "Registered User Bonus!"
@@ -363,7 +363,7 @@ msgid "Callback processed successfully"
 msgstr "Callback úspešne spracovaný"
 
 # New email strings
-msgid "This email contains your Na bežky map access details. As a bonus with your purchase, you now have access to the premium map with cross-country grooming status and other useful information."
+msgid "This email contains your Na bežky map access details. As a bonus with your purchase, you now have access to the premium map with cross-country trails grooming status and other useful information."
 msgstr "Tento e-mail obsahuje vaše detaily o prístupe k Na bežky mape. Ako bonus k vášmu nákupu teraz máte prístup k prémiovej mape s informáciami o úprave bežeckých tratí a ďalšími užitočnými informáciami."
 
 msgid "Your Voucher Information"
