--- a/languages/wp-nabezky-connector-sk_SK.po
+++ b/languages/wp-nabezky-connector-sk_SK.po
@@ -298,10 +298,10 @@ msgid "Checking status..."
 msgstr "Kontrola stavu..."
 
 msgid "Your Na bežky! map access information"
-msgstr "Informácie o prístupe k Na bežky! mape"
+msgstr "Bonus: prístup k Na bežky mape"
 
 msgid "As a bonus with your purchase, you now have access to the premium Na bežky map with cross-country trails grooming status and other useful information. You can access the map immediately using the button below, or save the details from the email we sent you for later use."
-msgstr "Ako bonus k vášmu nákupu teraz máte prístup k prémiovej Na bežky mape s informáciami o úprave bežeckých tratí a ďalšími užitočnými informáciami. Mapu môžte navštíviť okamžite pomocou tlačidla nižšie, alebo si uložiť detaily z e-mailu, ktorý sme vám poslali, na neskoršie použitie."
+msgstr "Ako bonus k vášmu nákupu ste získali aj prístup k prémiovej Na bežky mape, zobrazujúcu stav upravenosti bežeckých tratí a ďalšie užitočné informácie. Mapu môžte navštíviť okamžite pomocou tlačidla nižšie, alebo neskôr použitím informácií v e-mail správe, ktorú sme vám poslali."
 
 msgid "Registered User Bonus!"
 msgstr "Bonus pre registrovaného používateľa!"
@@ -373,10 +373,13 @@ msgstr "Callback úspešne spracovaný"
 
 # New email strings
 msgid "This email contains your Na bežky map access details. As a bonus with your purchase, you now have access to the premium map with cross-country trails grooming status and other useful information."
-msgstr "Tento e-mail obsahuje detaily o prístupe k Na bežky mape. Ako bonus k vášmu nákupu teraz máte prístup k prémiovej mape s informáciami o úprave bežeckých tratí a ďalšími užitočnými informáciami."
+msgstr "Ako bonus k vašej objednávke #%d na stránke %s ste získali aj prístup k prémiovej mape, zobrazujúcu stav upravenosti bežeckých tratí a ďalšie užitočné informácie. %s"
 
 msgid "Your Voucher Information"
 msgstr "Informácie o vašom poukaze"
+
+msgid "The vouchers listed below are valid for 3 days from activation on the map page."
+msgstr "Poukážky uvedené nižšie platia 3 dni od aktivácie na stránke mapy."
 
 # Month names
 msgid "January"
